RESOLVED FIXED 259719
AX: Content within iframes with ARIA roles is not accessible
https://bugs.webkit.org/show_bug.cgi?id=259719
Summary AX: Content within iframes with ARIA roles is not accessible
Tyler Wilcock
Reported 2023-08-01 18:04:01 PDT
...
Attachments
Patch (9.18 KB, patch)
2023-08-01 18:21 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-01 18:04:13 PDT
Tyler Wilcock
Comment 2 2023-08-01 18:16:44 PDT
Tyler Wilcock
Comment 3 2023-08-01 18:21:21 PDT
EWS
Comment 4 2023-08-01 22:37:33 PDT
Committed 266506@main (da3976833b2d): <https://commits.webkit.org/266506@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467175 [details].
Note You need to log in before you can comment on or make changes to this bug.