AX: Content within iframes with ARIA roles is not accessible https://bugs.webkit.org/show_bug.cgi?id=259719 rdar://104611075

Reviewed by Chris Fleizach.

This happened because `AccessibilityRenderObject::isAttachment` returned
false for `RenderWidget`s associated with objects that have ARIA roles,
which then caused `AccessibilityRenderObject::addAttachmentChildren()` to
return early without inserting any of the iframe's content.

This behavior (isAttachment returning false for things with an ARIA role)
was added 15 years ago in commit:

https://github.com/WebKit/WebKit/commit/ca5f21d630582a3f99fa65a6c882ec552ec10756

There is no test for this behavior, and I can't discern why it's
necessary. So this patch removes it, in turn fixing the bug.

* LayoutTests/accessibility/iframe-with-role-expected.txt: Added.
* LayoutTests/accessibility/iframe-with-role.html: Added.
* LayoutTests/platform/glib/TestExpectations: Skip new test.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/ios/accessibility/iframe-with-role-expected.txt: Added.
* LayoutTests/platform/mac-wk1/accessibility/iframe-with-role-expected.txt: Added.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isAttachment const):

Canonical link: https://commits.webkit.org/266506@main